import { AgentType } from "@/types/proto/api/v1/ai_service_pb";

/**
 * Parrot agent types enumeration
 * é¹¦é¹‰ä»£ç†ç±»å‹æšä¸¾
 */
export enum ParrotAgentType {
  DEFAULT = "DEFAULT",
  MEMO = "MEMO", // ğŸ¦œ ç°ç° - Memo Parrot
  SCHEDULE = "SCHEDULE", // ğŸ¦œ é‡‘åˆš - Schedule Parrot
  AMAZING = "AMAZING", // ğŸ¦œ æƒŠå¥‡ - Amazing Parrot (Milestone 2)
  CREATIVE = "CREATIVE", // ğŸ¦œ çµçµ - Creative Parrot (Milestone 4)
}

/**
 * Convert AgentType enum from proto to ParrotAgentType
 * å°† proto çš„ AgentType æšä¸¾è½¬æ¢ä¸º ParrotAgentType
 */
export function protoToParrotAgentType(agentType: AgentType): ParrotAgentType {
  switch (agentType) {
    case AgentType.MEMO:
      return ParrotAgentType.MEMO;
    case AgentType.SCHEDULE:
      return ParrotAgentType.SCHEDULE;
    case AgentType.AMAZING:
      return ParrotAgentType.AMAZING;
    case AgentType.CREATIVE:
      return ParrotAgentType.CREATIVE;
    case AgentType.DEFAULT:
    default:
      return ParrotAgentType.DEFAULT;
  }
}

/**
 * Convert ParrotAgentType to proto AgentType
 * å°† ParrotAgentType è½¬æ¢ä¸º proto AgentType
 */
export function parrotToProtoAgentType(agentType: ParrotAgentType): AgentType {
  switch (agentType) {
    case ParrotAgentType.MEMO:
      return AgentType.MEMO;
    case ParrotAgentType.SCHEDULE:
      return AgentType.SCHEDULE;
    case ParrotAgentType.AMAZING:
      return AgentType.AMAZING;
    case ParrotAgentType.CREATIVE:
      return AgentType.CREATIVE;
    case ParrotAgentType.DEFAULT:
    default:
      return AgentType.DEFAULT;
  }
}

/**
 * Parrot agent metadata
 * é¹¦é¹‰ä»£ç†å…ƒæ•°æ®
 */
export interface ParrotAgent {
  id: ParrotAgentType;
  name: string;
  icon: string;
  displayName: string;
  description: string;
  color: string;
  available: boolean; // Whether this parrot is available in current milestone
  examplePrompts?: string[]; // Suggested prompts for this parrot
  backgroundImage?: string; // Background image for the agent card
}

/**
 * All parrot agents configuration
 * æ‰€æœ‰é¹¦é¹‰ä»£ç†é…ç½®
 */
export const PARROT_AGENTS: Record<ParrotAgentType, ParrotAgent> = {
  [ParrotAgentType.DEFAULT]: {
    id: ParrotAgentType.DEFAULT,
    name: "default",
    icon: "ğŸ¤–",
    displayName: "é»˜è®¤åŠ©æ‰‹",
    description: "é»˜è®¤ AI åŠ©æ‰‹ï¼Œä½¿ç”¨ RAG ç³»ç»Ÿå›ç­”é—®é¢˜",
    color: "gray",
    available: true,
    examplePrompts: ["æ€»ç»“æœ€è¿‘çš„ç¬”è®°", "å¸®æˆ‘æœç´¢å…³äº Python çš„å†…å®¹", "ä»Šå¤©æœ‰ä»€ä¹ˆå®‰æ’"],
  },
  [ParrotAgentType.MEMO]: {
    id: ParrotAgentType.MEMO,
    name: "memo",
    icon: "ğŸ¦œ",
    displayName: "ç°ç°",
    description: "ç¬”è®°åŠ©æ‰‹ï¼Œä¸“æ³¨äºæ£€ç´¢ã€æ€»ç»“å’Œç®¡ç†ç¬”è®°",
    color: "blue",
    available: true,
    examplePrompts: ["æœç´¢å…³äºç¼–ç¨‹çš„ç¬”è®°", "æ€»ç»“æœ€è¿‘çš„å·¥ä½œå¤‡å¿˜", "æŸ¥æ‰¾åŒ…å«é¡¹ç›®ç®¡ç†çš„ç¬”è®°"],
    backgroundImage: "/images/parrots/memo_parrot_bg.webp",
  },
  [ParrotAgentType.SCHEDULE]: {
    id: ParrotAgentType.SCHEDULE,
    name: "schedule",
    icon: "ğŸ“…",
    displayName: "é‡‘åˆš",
    description: "æ—¥ç¨‹åŠ©æ‰‹ï¼Œå¸®åŠ©åˆ›å»ºã€æŸ¥è¯¢å’Œç®¡ç†æ—¥ç¨‹",
    color: "orange",
    available: true,
    examplePrompts: ["ä»Šå¤©æœ‰ä»€ä¹ˆå®‰æ’", "æ˜å¤©ä¸‹åˆæœ‰ç©ºå—", "å¸®æˆ‘åˆ›å»ºä¸‹å‘¨ä¼šè®®æé†’"],
    backgroundImage: "/images/parrots/schedule_bg.webp",
  },
  [ParrotAgentType.AMAZING]: {
    id: ParrotAgentType.AMAZING,
    name: "amazing",
    icon: "â­",
    displayName: "æƒŠå¥‡",
    description: "ç»¼åˆåŠ©æ‰‹ï¼Œç»“åˆç¬”è®°å’Œæ—¥ç¨‹åŠŸèƒ½",
    color: "purple",
    available: true,
    examplePrompts: ["æ€»ç»“ä»Šå¤©çš„ç¬”è®°å’Œæ—¥ç¨‹", "å¸®æˆ‘è§„åˆ’ä¸‹å‘¨å·¥ä½œ", "æŸ¥è¯¢æœ€è¿‘çš„é¡¹ç›®ç›¸å…³å†…å®¹"],
    backgroundImage: "/images/parrots/amazing_bg.webp",
  },
  [ParrotAgentType.CREATIVE]: {
    id: ParrotAgentType.CREATIVE,
    name: "creative",
    icon: "ğŸ’¡",
    displayName: "çµçµ",
    description: "åˆ›æ„åŠ©æ‰‹ï¼Œæä¾›åˆ›æ„å†™ä½œå’Œå¤´è„‘é£æš´",
    color: "pink",
    available: true,
    examplePrompts: ["å¸®æˆ‘å¤´è„‘é£æš´äº§å“æ¨å¹¿åˆ›æ„", "å†™ä¸€å°é¡¹ç›®è¿›åº¦æ±‡æŠ¥é‚®ä»¶", "ä¼˜åŒ–è¿™æ®µæ–‡å­—çš„è¡¨è¾¾"],
    backgroundImage: "/images/parrots/creative_bg.webp",
  },
};

/**
 * Get available parrot agents for current milestone
 * è·å–å½“å‰é‡Œç¨‹ç¢‘å¯ç”¨çš„é¹¦é¹‰ä»£ç†
 */
export function getAvailableParrots(): ParrotAgent[] {
  return Object.values(PARROT_AGENTS).filter((agent) => agent.available);
}

/**
 * Get parrot agent by type
 * æ ¹æ®ç±»å‹è·å–é¹¦é¹‰ä»£ç†
 */
export function getParrotAgent(type: ParrotAgentType): ParrotAgent {
  return PARROT_AGENTS[type] || PARROT_AGENTS[ParrotAgentType.DEFAULT];
}

/**
 * Memo query result data
 * ç¬”è®°æŸ¥è¯¢ç»“æœæ•°æ®
 */
export interface MemoQueryResultData {
  memos: MemoSummary[];
  query: string;
  count: number;
}

/**
 * Memo summary
 * ç¬”è®°æ‘˜è¦
 */
export interface MemoSummary {
  uid: string;
  content: string;
  score: number;
}

/**
 * Schedule query result data
 * æ—¥ç¨‹æŸ¥è¯¢ç»“æœæ•°æ®
 */
export interface ScheduleQueryResultData {
  schedules: ScheduleSummary[];
  query: string;
  count: number;
  timeRangeDescription: string;
  queryType: string; // e.g., "upcoming", "range", "filter"
}

/**
 * Schedule summary
 * æ—¥ç¨‹æ‘˜è¦
 */
export interface ScheduleSummary {
  uid: string;
  title: string;
  startTimestamp: number;
  endTimestamp: number;
  allDay: boolean;
  location?: string;
  status: string;
}

/**
 * Parrot chat callbacks
 * é¹¦é¹‰èŠå¤©å›è°ƒå‡½æ•°
 */
export interface ParrotChatCallbacks {
  onContent?: (content: string) => void;
  onMemoQueryResult?: (result: MemoQueryResultData) => void;
  onScheduleQueryResult?: (result: ScheduleQueryResultData) => void;
  onThinking?: (message: string) => void;
  onToolUse?: (toolName: string) => void;
  onToolResult?: (result: string) => void;
  onDone?: () => void;
  onError?: (error: Error) => void;
}

/**
 * Parrot chat parameters
 * é¹¦é¹‰èŠå¤©å‚æ•°
 */
export interface ParrotChatParams {
  agentType: ParrotAgentType;
  message: string;
  history?: string[];
  userTimezone?: string;
}

/**
 * Parrot event types
 * é¹¦é¹‰äº‹ä»¶ç±»å‹
 */
export enum ParrotEventType {
  THINKING = "thinking",
  TOOL_USE = "tool_use",
  TOOL_RESULT = "tool_result",
  ANSWER = "answer",
  ERROR = "error",
  MEMO_QUERY_RESULT = "memo_query_result",
  SCHEDULE_QUERY_RESULT = "schedule_query_result",
  SCHEDULE_UPDATED = "schedule_updated",
}

/**
 * Parrot theme configuration
 * é¹¦é¹‰ä¸»é¢˜é…ç½® - ä¿¡æ¯æ¸…æ™°ä¼˜å…ˆè®¾è®¡
 *
 * è®¾è®¡åŸåˆ™:
 * - ä¿¡æ¯æ¸…æ™°ä¼˜å…ˆäºè§†è§‰æ•ˆæœ
 * - é«˜å¯¹æ¯”åº¦ç¡®ä¿å¯è¯»æ€§
 * - ç®€æ´å¹²å‡€çš„è§†è§‰
 * - æ¯ä¸ªé¹¦é¹‰ç‹¬ç«‹ä¸”åè°ƒçš„è‰²ç³»
 */
export const PARROT_THEMES = {
  DEFAULT: {
    // é»˜è®¤åŠ©æ‰‹ - ä¸­æ€§ç°
    bubbleUser: "bg-zinc-900 dark:bg-zinc-200 text-white dark:text-zinc-900",
    bubbleBg: "bg-white dark:bg-zinc-800",
    bubbleBorder: "border-zinc-200 dark:border-zinc-700",
    text: "text-zinc-900 dark:text-zinc-100",
    textSecondary: "text-zinc-600 dark:text-zinc-400",
    iconBg: "bg-zinc-100 dark:bg-zinc-700",
    iconText: "text-zinc-700 dark:text-zinc-300",
    inputBg: "bg-zinc-50 dark:bg-zinc-900",
    inputBorder: "border-zinc-200 dark:border-zinc-700",
    inputFocus: "focus:ring-zinc-500 focus:border-zinc-500",
    cardBg: "bg-white dark:bg-zinc-800",
    cardBorder: "border-zinc-200 dark:border-zinc-700",
    accent: "bg-zinc-500",
    accentText: "text-white",
  },
  // ç°ç° - éæ´²ç°é¹¦é¹‰ (African Grey Parrot)
  // DNA: é“¶ç°ç¾½æ¯› + çº¢è‰²ç‚¹ç¼€ (subtle)
  MEMO: {
    bubbleUser: "bg-slate-700 dark:bg-slate-300 text-white dark:text-slate-900",
    bubbleBg: "bg-white dark:bg-zinc-800",
    bubbleBorder: "border-slate-200 dark:border-slate-700",
    text: "text-slate-900 dark:text-slate-100",
    textSecondary: "text-slate-600 dark:text-slate-400",
    iconBg: "bg-slate-100 dark:bg-slate-700",
    iconText: "text-slate-700 dark:text-slate-300",
    inputBg: "bg-slate-50 dark:bg-slate-900",
    inputBorder: "border-slate-200 dark:border-slate-700",
    inputFocus: "focus:ring-slate-500 focus:border-slate-500",
    cardBg: "bg-white dark:bg-zinc-800",
    cardBorder: "border-slate-200 dark:border-slate-700",
    accent: "bg-red-500",
    accentText: "text-white",
  },
  // é‡‘åˆš - è“é»„é‡‘åˆšé¹¦é¹‰ (Blue-and-yellow Macaw)
  // DNA: è“é»„ (simplified, high contrast)
  SCHEDULE: {
    bubbleUser: "bg-cyan-600 dark:bg-cyan-500 text-white",
    bubbleBg: "bg-white dark:bg-zinc-800",
    bubbleBorder: "border-cyan-200 dark:border-cyan-700",
    text: "text-slate-900 dark:text-cyan-50",
    textSecondary: "text-slate-600 dark:text-cyan-200",
    iconBg: "bg-cyan-100 dark:bg-cyan-900",
    iconText: "text-cyan-700 dark:text-cyan-300",
    inputBg: "bg-cyan-50 dark:bg-cyan-950",
    inputBorder: "border-cyan-200 dark:border-cyan-700",
    inputFocus: "focus:ring-cyan-500 focus:border-cyan-500",
    cardBg: "bg-white dark:bg-zinc-800",
    cardBorder: "border-cyan-200 dark:border-cyan-700",
    accent: "bg-cyan-500",
    accentText: "text-white",
  },
  // æƒŠå¥‡ - äºšé©¬é€Šé¹¦é¹‰ (Amazon Parrot)
  // DNA: ç»¿è‰² (simplified, high contrast)
  AMAZING: {
    bubbleUser: "bg-emerald-600 dark:bg-emerald-500 text-white",
    bubbleBg: "bg-white dark:bg-zinc-800",
    bubbleBorder: "border-emerald-200 dark:border-emerald-700",
    text: "text-slate-900 dark:text-emerald-50",
    textSecondary: "text-slate-600 dark:text-emerald-200",
    iconBg: "bg-emerald-100 dark:bg-emerald-900",
    iconText: "text-emerald-700 dark:text-emerald-300",
    inputBg: "bg-emerald-50 dark:bg-emerald-950",
    inputBorder: "border-emerald-200 dark:border-emerald-700",
    inputFocus: "focus:ring-emerald-500 focus:border-emerald-500",
    cardBg: "bg-white dark:bg-zinc-800",
    cardBorder: "border-emerald-200 dark:border-emerald-700",
    accent: "bg-emerald-500",
    accentText: "text-white",
  },
  // çµçµ - è™çš®é¹¦é¹‰ (Budgerigar)
  // DNA: ç»¿è‰² (simplified, high contrast)
  CREATIVE: {
    bubbleUser: "bg-lime-600 dark:bg-lime-500 text-white",
    bubbleBg: "bg-white dark:bg-zinc-800",
    bubbleBorder: "border-lime-200 dark:border-lime-700",
    text: "text-slate-900 dark:text-lime-50",
    textSecondary: "text-slate-600 dark:text-lime-200",
    iconBg: "bg-lime-100 dark:bg-lime-900",
    iconText: "text-lime-700 dark:text-lime-300",
    inputBg: "bg-lime-50 dark:bg-lime-950",
    inputBorder: "border-lime-200 dark:border-lime-700",
    inputFocus: "focus:ring-lime-500 focus:border-lime-500",
    cardBg: "bg-white dark:bg-zinc-800",
    cardBorder: "border-lime-200 dark:border-lime-700",
    accent: "bg-lime-500",
    accentText: "text-white",
  },
} as const;

/**
 * Icons for each parrot
 * æ¯ä¸ªé¹¦é¹‰çš„å›¾æ ‡
 */
export const PARROT_ICONS: Record<string, string> = {
  DEFAULT: "ğŸ¤–",
  MEMO: "/images/parrots/icons/memo_icon.webp",
  SCHEDULE: "/images/parrots/icons/schedule_icon.webp",
  AMAZING: "/images/parrots/icons/amazing_icon.webp",
  CREATIVE: "/images/parrots/icons/creative_icon.webp",
};
